--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -2081,7 +2081,7 @@ access in the guest.</property>
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">_Mode:</property>
                                         <property name="use_underline">True</property>
-                                        <property name="mnemonic_widget">fs-type-combo</property>
+                                        <property name="mnemonic_widget">fs-mode-combo</property>
                                       </widget>
                                       <packing>
                                         <property name="top_attach">1</property>
