--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1298,7 +1298,7 @@
                                         <child>
                                           <widget class="GtkTable" id="table7">
                                             <property name="visible">True</property>
-                                            <property name="n_rows">3</property>
+                                            <property name="n_rows">4</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">6</property>
                                             <property name="row_spacing">6</property>
@@ -1402,6 +1402,57 @@
                                                 <property name="right_attach">2</property>
                                                 <property name="top_attach">2</property>
                                                 <property name="bottom_attach">3</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="label81">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">1</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="label" translatable="yes">Machine _Type: </property>
+                                                <property name="use_underline">True</property>
+                                                <property name="mnemonic_widget">machine-type-combo</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="top_attach">3</property>
+                                                <property name="bottom_attach">4</property>
+                                                <property name="x_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkHBox" id="hbox30">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                                <property name="spacing">6</property>
+                                                <child>
+                                                  <widget class="GtkComboBox" id="machine-type-combo">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">False</property>
+                                                    <signal name="changed" handler="on_machine_type_changed"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkLabel" id="machine-type-label">
+                                                    <property name="xalign">0</property>
+                                                    <property name="label" translatable="yes">label</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">True</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                              </widget>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="right_attach">2</property>
+                                                <property name="top_attach">3</property>
+                                                <property name="bottom_attach">4</property>
                                               </packing>
                                             </child>
                                           </widget>
